Fix bug on resp menu on mobile

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -42,9 +42,6 @@ body.dark-theme {
 .bold {
     font-weight: bold;
 }
-.fixed {
-    position: fixed;
-  }
 
 /* Selected */
 ::-moz-selection {
